Fix image clipping in README (#657).

--- a/snapshot/index.styl
+++ b/snapshot/index.styl
@@ -187,9 +187,9 @@ section.opentype
 
 	> ol.narrow
 		font-size: 0.75em;
-		width: 48em;
+		width: 56em;
 		list-style: none;
-		margin: 0 -5em;
+		margin: 0 -9em;
 		padding: 0;
 		display: flex;
 		justify-content: left;
@@ -199,7 +199,7 @@ section.opentype
 		> li
 			flex: none;
 			display: flex;
-			width: 24em;
+			width: 28em;
 			box-sizing: border-box;
 
 			> div.desc-group
